# esp-learn

./: README.md
start1/: README.md  sdkconfig
start1/main/: CMakeLists.txt  task_test_1.c
start1/main/test/: CMakeLists.txt  test1.c
start2/: CMakeLists.txt  custom.cpp  main.c  monitor.sh  sdkconfig
start2/components/customtest/: CMakeLists.txt  component.mk  test.c
start2/components/customtest/include/: test.h
start3/: .gitignore  CMakeLists.txt  menuconfig.sh  monitor.sh  sdkconfig
start3/components/btstack/: btstack_config.h
start3/main/: main.cpp
start3/main/hfp/: hfp_hf_demo.c  sco_demo_util.c
start4/: .gitignore  CMakeLists.txt  sdkconfig
start4/src/components/btstack/: CMakeLists.txt  btstack_config.h
start4/src/components/hfp_demo/: CMakeLists.txt
start4/src/components/hfp_demo/src/: hfp_hf_demo.c  sco_demo_util.c
start4/src/test_main/: CMakeLists.txt  main.c  main.cpp
start4/tools/: menuconfig.sh  monitor.sh
