cmake_minimum_required(VERSION 3.5)
#include($ENV{IDF_PATH}/tools/cmake/project.cmake)
set(CMAKE_CXX_STANDARD 11)
project(start3 CXX C)

add_executable(${CMAKE_PROJECT_NAME}.elf main/main.cpp)
include($ENV{IDF_PATH}/tools/cmake/idf_functions.cmake)
list(APPEND IDF_EXTRA_COMPONENT_DIRS "${CMAKE_SOURCE_DIR}/components")
set(IDF_BUILD_ARTIFACTS ON)
set(IDF_PROJECT_EXECUTABLE ${CMAKE_PROJECT_NAME}.elf)
set(IDF_BUILD_ARTIFACTS_DIR ${CMAKE_BINARY_DIR})
set(IDF_COMPONENTS freertos spi_flash bootloader esptool_py bt mqtt esp_http_server vfs mdns log)
idf_import_components(components $ENV{IDF_PATH} esp-idf)
idf_link_components(${CMAKE_PROJECT_NAME}.elf "${components}")